aligned items in categories list, added prices in categories list, removed position-fixed from nav bar so that it doesn't ovelap with the category heading on category page

--- a/src/styles/components/Categories.scss
+++ b/src/styles/components/Categories.scss
@@ -6,6 +6,7 @@
   border-radius: 1px;
   margin: 1px;
   box-shadow: 0 0 2px;
+  align-items: center;
 }
 
 .item-list {
