--- a/src/styles/components/Nav.scss
+++ b/src/styles/components/Nav.scss
@@ -4,15 +4,10 @@
   display: flex;
   justify-content: space-between;
   margin:10px;
-  position: fixed; 
   top: 0;  
   width: 100%;  
   z-index: 1000;  
 }
-
-// .nav-dropdown{
-  
-// }
 
 .nav-toggle {
   cursor: pointer;
